<?xml version="1.0"?>
<package format="3">
  <name>chicken_head</name>
  <version>0.1.0</version>
  <description>Chicken Head Demo</description>

  <maintainer email="juan@todo.todo">juan</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>champ_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>eigen</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>launch</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
